--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pedantic: ^1.11.0
+  test: ^1.15.4
 
 dev_dependencies:
   flutter_test:
