--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '2.1.0'
+          flutter-version: '2.2.0'
+          channel: 'stable'
       - run: flutter pub get
       - run: flutter test
