--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   test:
     runs-on: macos-latest
-
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
@@ -16,3 +15,31 @@ jobs:
           channel: 'stable'
       - run: flutter pub get
       - run: flutter test
+  
+  drive_test:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        device:
+        - "iPhone 8 (13.1)"
+        - "iPhone 11 Pro Max (13.1)"
+    steps:
+      - name: "List all simulators"
+        run: "xcrun instruments -s"
+      - name: "Start Simulator"
+        run: |
+          UDID=$(
+            xcrun instruments -s |
+            awk \
+              -F ' *[][]' \
+              -v 'device=${{ matrix.device }}' \
+              '$1 == device { print $2 }'
+          )
+          xcrun simctl boot "${UDID:?No Simulator with this name found}"
+      - uses: actions/checkout@v1
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.2.0'
+          channel: 'stable'
+      - name: "Run Flutter Driver tests"
+        run: "flutter drive --target=test_driver/main.dart"
