--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,11 +25,11 @@ jobs:
         - "iPhone 11 Pro Max (13.1)"
     steps:
       - name: "List all simulators"
-        run: "xcrun instruments -s"
+        run: "xcrun xctrace -s"
       - name: "Start Simulator"
         run: |
           UDID=$(
-            xcrun instruments -s |
+            xcrun xctrace -s |
             awk \
               -F ' *[][]' \
               -v 'device=${{ matrix.device }}' \
