--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -42,4 +42,5 @@ jobs:
           flutter-version: '2.2.0'
           channel: 'stable'
       - name: "Run Flutter Driver tests"
-        run: "flutter drive --target=test_driver/app.dart"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart
+"
