--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,3 +43,19 @@ jobs:
         with:
           api-level: 29
           script: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart"
+
+  integration_test_chrome:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.2.0'
+          channel: 'stable'
+      - uses: nanasess/setup-chromedriver@master
+        with:
+          chromedriver-version: '88.0.4324.96'
+      - name: boot chromedriver
+        run: "./chromedriver --port=4444"
+      - name: Run Flutter Integration tests
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --release --browser-name=chrome"
