--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -56,6 +56,6 @@ jobs:
         with:
           chromedriver-version: '88.0.4324.96'
       - name: boot chromedriver
-        run: "./chromedriver --port=4444"
+        run: chromedriver --url-base=/wd/hub --port=4444 &
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --release --browser-name=chrome"
