--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -57,5 +57,6 @@ jobs:
           chromedriver-version: '88.0.4324.96'
       - name: boot chromedriver
         run: chromedriver --url-base=/wd/hub --port=4444 &
+      - run: sleep 10
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=chrome"
