--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,7 +54,7 @@ jobs:
           channel: 'stable'
       - run: flutter config --enable-web
       - uses: browser-actions/setup-chrome@latest
-      - run: chrome --version
+      - uses: chrome --version
         with:
           chrome-version: beta
       - uses: nanasess/setup-chromedriver@master
