--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,7 +54,7 @@ jobs:
           channel: 'stable'
       - run: flutter config --enable-web
       - uses: browser-actions/setup-chrome@latest
-      - run: chrome --version
+      - run: chromium --version
       - uses: nanasess/setup-chromedriver@master
         with:
           chromedriver-version: '88.0.4324.96'
