--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -62,4 +62,4 @@ jobs:
         run: chromedriver --url-base=/wd/hub --port=4444 &
       - run: sleep 10
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --release --browser-name=chrome"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --release --browser-name=chrome --web-port=4444"
