--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -53,13 +53,14 @@ jobs:
           flutter-version: '2.2.0'
           channel: 'stable'
       - run: flutter config --enable-web
+      - run: dart lib/web_driver_installer.dart chromedriver --install-only
       - uses: browser-actions/setup-chrome@latest
       - run: chromium --version
       - uses: nanasess/setup-chromedriver@master
         with:
           chromedriver-version: '88.0.4324.96'
-      - name: boot chromedriver
-        run: chromedriver --url-base=/wd/hub --port=4444 &
+      # - name: boot chromedriver
+      #   run: chromedriver --port=4444 &
       - run: sleep 10
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --release --browser-name=chrome --web-port=4444"
