--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -61,14 +61,14 @@ jobs:
       # - name: boot chromedriver
       #   run: chromedriver --port=4444 &
       - name: set up
-        run:
-          - git clone https://github.com/flutter/web_installers.git
-          - cd web_installers/packages/web_drivers/
-          - pub get
-          - dart lib/web_driver_installer.dart chromedriver --install-only
-          - chromedriver/chromedriver --port=4444 &
-          - sleep 1
-          - cd ../../../
+        run: |
+          git clone https://github.com/flutter/web_installers.git
+          cd web_installers/packages/web_drivers/
+          pub get
+          dart lib/web_driver_installer.dart chromedriver --install-only
+          chromedriver/chromedriver --port=4444 &
+          sleep 1
+          cd ../../../
       - run: sleep 10
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=chrome --web-port=4444"
