--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -53,6 +53,11 @@ jobs:
           flutter-version: '2.2.0'
           channel: 'stable'
       - run: flutter config --enable-web
+      - uses: browser-actions/setup-chromium@latest
+        with:
+        chromium-version: 827102
+        
+      - run: chrome --version
       # - uses: browser-actions/setup-chrome@latest
       # - run: chromium --version
       # - uses: nanasess/setup-chromedriver@master
@@ -60,15 +65,6 @@ jobs:
       #     chromedriver-version: '88.0.4324.96'
       # - name: boot chromedriver
       #   run: chromedriver --port=4444 &
-      - name: set up
-        run: |
-          git clone https://github.com/flutter/web_installers.git
-          cd web_installers/packages/web_drivers/
-          pub get
-          dart lib/web_driver_installer.dart chromedriver --install-only
-          chromedriver/chromedriver --port=4444 &
-          sleep 1
-          cd ../../../
-      - run: sleep 10
+      - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=chrome --web-port=4444"
