--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -53,18 +53,11 @@ jobs:
           flutter-version: '2.2.0'
           channel: 'stable'
       - run: flutter config --enable-web
-      - uses: browser-actions/setup-chromium@latest
+      - uses: nanasess/setup-chromedriver@master
         with:
-          chromium-version: 827102
-        
-      - run: chromium --version
-      # - uses: browser-actions/setup-chrome@latest
-      # - run: chromium --version
-      # - uses: nanasess/setup-chromedriver@master
-      #   with:
-      #     chromedriver-version: '88.0.4324.96'
-      # - name: boot chromedriver
-      #   run: chromedriver --port=4444 &
+          chromedriver-version: '91.0.4472.19'
+      - name: boot chromedriver
+        run: chromedriver --port=4444
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=chrome --web-port=4444"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server"
