--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -53,11 +53,15 @@ jobs:
           flutter-version: '2.2.0'
           channel: 'stable'
       - run: flutter config --enable-web
+      - uses: browser-actions/setup-chrome@latest
+      - run: chrome --version
+        with:
+          chrome-version: beta
       - uses: nanasess/setup-chromedriver@master
         with:
           chromedriver-version: '91.0.4472.19'
       - name: boot chromedriver
-        run: chromedriver --port=4444
+        run: chromedriver --port=4444 --url-base=/wd/hub &
       - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server"
