--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,7 +54,7 @@ jobs:
           channel: 'stable'
       - run: flutter config --enable-web
       - name: boot chromedriver
-        run: chromedriver --port=4444 --url-base=/wd/hub &
+        run: chromedriver --port=4444 &
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=chrome"
