--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -46,6 +46,9 @@ jobs:
 
   integration_test_chrome:
     runs-on: macos-latest
+    strategy:
+      matrix:
+        browser: [chrome, safari]
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
@@ -54,7 +57,11 @@ jobs:
           channel: 'stable'
       - run: flutter config --enable-web
       - name: boot chromedriver
+        if matrix.browser == 'chrome'
         run: chromedriver --port=4444 &
+      - name: boot safaridriver
+        if matrix.browser == 'safari'
+        run: safaridriver --port=4444 &
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=chrome"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${matrix.browser}"
