--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -44,7 +44,7 @@ jobs:
           api-level: 29
           script: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart"
 
-  integration_test_chrome:
+  integration_test_web:
     runs-on: macos-latest
     strategy:
       matrix:
@@ -64,4 +64,4 @@ jobs:
         run: safaridriver --port=4444 &
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${matrix.browser}"
+        run: flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${matrix.browser}
