--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -64,7 +64,7 @@ jobs:
         run: safaridriver --port=4444 &
       - name: boot edgedriver
         if: matrix.browser == 'edge'
-        run: edge_driver --port=4444 &
+        run: msedgedriver --port=4444 &
       - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
