--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -48,7 +48,8 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        browser: [chrome, safari, edge]
+        # browser: [chrome, safari, edge, firefox]
+        browser: [chrome, safari, firefox]
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
@@ -65,6 +66,9 @@ jobs:
       - name: boot edgedriver
         if: matrix.browser == 'edge'
         run: msedgedriver --port=4444 &
+      - name: boot edgedriver
+        if: matrix.browser == 'firefox'
+        run: geckodriver --port=4444 &
       - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
