--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -63,12 +63,12 @@ jobs:
       - name: boot safaridriver
         if: matrix.browser == 'safari'
         run: safaridriver --port=4444 &
-      - name: boot edgedriver
+      - name: boot msedgedriver
         if: matrix.browser == 'edge'
         run: msedgedriver --port=4444 &
-      - name: boot edgedriver
+      - name: boot geckodriver
         if: matrix.browser == 'firefox'
         run: geckodriver --port=4444 &
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }} --web-port=4444"
