--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -71,4 +71,4 @@ jobs:
         run: geckodriver --port=4444 &
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }} --web-port=4444"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
