--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -49,7 +49,7 @@ jobs:
     strategy:
       matrix:
         # browser: [chrome, safari, edge, firefox]
-        browser: [chrome, safari, firefox, edge]
+        browser: [chrome, safari, edge, firefox]
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
@@ -65,10 +65,10 @@ jobs:
         run: safaridriver --port=4444 &
       - name: boot msedgedriver
         if: matrix.browser == 'edge'
-        run: msedgedriver --port=4444 &
+        run: msedgedriver &
       - name: boot geckodriver
         if: matrix.browser == 'firefox'
-        run: geckodriver --port=4444 &
+        run: geckodriver &
       - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
