--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -55,7 +55,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '2.2.0'
-          channel: 'stable'
+          channel: 'master'
       - run: flutter config --enable-web
       - name: boot chromedriver
         if: matrix.browser == 'chrome'
