--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,7 +54,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '2.2.0'
+          # flutter-version: '2.2.0'
           channel: 'master'
       - run: flutter config --enable-web
       - name: boot chromedriver
