--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -44,18 +44,17 @@ jobs:
           api-level: 29
           script: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart"
 
-  integration_test_web:
+  integration_test_web_mac:
     runs-on: macos-latest
     strategy:
       matrix:
-        # browser: [chrome, safari, edge, firefox]
-        browser: [chrome, safari, edge, firefox]
+        browser: [chrome, safari, firefox]
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          # flutter-version: '2.2.0'
-          channel: 'master'
+          flutter-version: '2.2.0'
+          channel: 'stable'
       - run: flutter config --enable-web
       - name: boot chromedriver
         if: matrix.browser == 'chrome'
@@ -72,3 +71,18 @@ jobs:
       - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
+
+    integration_test_web_win:
+      runs-on: windows-2019
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.2.0'
+          channel: 'stable'
+      - run: flutter config --enable-web
+      - name: boot msedgedriver
+        run: msedgedriver --port=4444 &
+      - run: sleep 5
+      - name: Run Flutter Integration tests
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=edge"
