--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -85,4 +85,4 @@ jobs:
         run: msedgedriver --port=4444 &
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=edge"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=edge --driver-port=4444"
