--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -82,7 +82,7 @@ jobs:
           channel: 'stable'
       - run: flutter config --enable-web
       # - name: boot msedgedriver
-      - run: msedgedriver --port=4444 &
+      - run: msedgedriver --port=4444
       # - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=edge"
