--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
 
-  integration_test_web_win:
+  integration_test_web_win_edge:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
@@ -86,3 +86,18 @@ jobs:
       # - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=edge"
+
+  integration_test_web_win_firefox:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.2.0'
+          channel: 'stable'
+      - run: flutter config --enable-web
+      - name: boot geckodriver
+        run: geckodriver --port=4444 &
+      - run: sleep 5
+      - name: Run Flutter Integration tests
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=firefox"
