--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -96,8 +96,8 @@ jobs:
           # flutter-version: '2.2.0'
           channel: 'master'
       - run: flutter config --enable-web
-      - name: boot geckodriver
-        run: geckodriver --port=4444 &
-      - run: sleep 5
+      # - name: boot geckodriver
+      #   run: geckodriver --port=4444 &
+      # - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=firefox"
