--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -78,8 +78,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '2.2.0'
-          channel: 'stable'
+          # flutter-version: '2.2.0'
+          channel: 'master'
       - run: flutter config --enable-web
       - name: boot msedgedriver
         run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
