--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -85,7 +85,7 @@ jobs:
         run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=edge"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --release --browser-name=edge"
 
   integration_test_web_win_firefox:
     runs-on: windows-latest
