--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -97,7 +97,7 @@ jobs:
           channel: 'stable'
       - run: flutter config --enable-web
       - name: boot geckodriver
-        run: geckodriver --port=4444 &
+        run: Start-Process -FilePath geckodriver -ArgumentList "--port=4444"
       - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=firefox"
