--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -62,18 +62,15 @@ jobs:
       - name: boot safaridriver
         if: matrix.browser == 'safari'
         run: safaridriver --port=4444 &
-      - name: boot msedgedriver
-        if: matrix.browser == 'edge'
-        run: msedgedriver --port=4444 &
-      - name: boot geckodriver
-        if: matrix.browser == 'firefox'
-        run: geckodriver --port=4444 &
       - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
 
-  integration_test_web_win_edge:
+  integration_test_web_win:
     runs-on: windows-latest
+    strategy:
+      matrix:
+        browser: [edge, firefox]
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
@@ -81,24 +78,31 @@ jobs:
           flutter-version: '2.2.0'
           channel: 'stable'
       - run: flutter config --enable-web
-      - run: "npm install @microsoft/edge-selenium-tools selenium-webdriver"
       - name: boot msedgedriver
+        if: matrix.browser == 'edge'
         run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
-      - run: sleep 5
-      - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=edge"
-
-  integration_test_web_win_firefox:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '2.2.0'
-          channel: 'stable'
-      - run: flutter config --enable-web
       - name: boot geckodriver
+        if: matrix.browser == 'firefox'
         run: Start-Process -FilePath geckodriver -ArgumentList "--port=4444"
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=firefox"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
+
+  integration_test_web_edgr:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        browser: [edge]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.2.0'
+          channel: 'stable'
+      - run: flutter config --enable-web
+      - name: boot msedgedriver
+        if: matrix.browser == 'edge'
+        run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
+      - run: sleep 5
+      - name: Run Flutter Integration tests
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server"
