--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -102,7 +102,7 @@ jobs:
       - run: flutter config --enable-web
       - name: boot msedgedriver
         if: matrix.browser == 'edge'
-        run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
+        run: Start-Process -FilePath chromedriver -ArgumentList "--port=4444"
       - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server"
