--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
 
-  integration_test_web_edgr:
+  integration_test_web_edge:
     runs-on: windows-latest
     strategy:
       matrix:
@@ -105,4 +105,4 @@ jobs:
         run: Start-Process -FilePath chromedriver -ArgumentList "--port=4444"
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server  --profile --browser-name=${{ matrix.browser }}"
