--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -100,9 +100,10 @@ jobs:
           flutter-version: '2.2.0'
           channel: 'stable'
       - run: flutter config --enable-web
+      - run: flutter devices
       - name: boot msedgedriver
         if: matrix.browser == 'edge'
         run: Start-Process -FilePath chromedriver -ArgumentList "--port=4444"
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server  --profile --browser-name=${{ matrix.browser }}"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
