--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -101,9 +101,10 @@ jobs:
           channel: 'stable'
       - run: flutter config --enable-web
       - run: flutter devices
+      - run: "start microsoft-edge:"
       - name: boot msedgedriver
         if: matrix.browser == 'edge'
-        run: Start-Process -FilePath chromedriver -ArgumentList "--port=4444"
+        run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
       - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
