--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -104,7 +104,7 @@ jobs:
       - run: flutter devices
       - name: boot msedgedriver
         if: matrix.browser == 'edge'
-        run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
+        run: Start-Process -FilePath MicrosoftWebDriver -ArgumentList "--port=4444"
       - run: sleep 5
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
