--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -100,6 +100,7 @@ jobs:
           flutter-version: '2.2.0'
           channel: 'stable'
       - run: flutter config --enable-web
+      - run: Get-Process
       - run: flutter devices
       - name: boot msedgedriver
         if: matrix.browser == 'edge'
