--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -105,7 +105,7 @@ jobs:
         run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
       - run: sleep 5
       - run: Get-Process
-      - run: Stop-Process -Name MicrosoftEdgeUpdate
+      - run: Stop-Process -Name MicrosoftEdgeUpdate -Force
       - run: Get-Process
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
