--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -70,7 +70,8 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        browser: [edge, firefox]
+        browser: [firefox]
+        # browser: [firefox, edge]
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
@@ -85,25 +86,5 @@ jobs:
         if: matrix.browser == 'firefox'
         run: Start-Process -FilePath geckodriver -ArgumentList "--port=4444"
       - run: sleep 5
-      - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
-
-  integration_test_web_edge:
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        browser: [edge]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '2.2.0'
-          channel: 'stable'
-      - run: flutter config --enable-web
-      - name: boot msedgedriver
-        if: matrix.browser == 'edge'
-        run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
-      - run: sleep 120
-      - run: Get-Process
       - name: Run Flutter Integration tests
         run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
