--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -70,7 +70,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        browser: [edge]
+        browser: [firefox]
         # browser: [firefox, edge]
     steps:
       - uses: actions/checkout@v2
@@ -87,4 +87,4 @@ jobs:
         run: Start-Process -FilePath geckodriver -ArgumentList "--port=4444"
       - run: sleep 5
       - name: Run Flutter Integration tests
-        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d ${{ matrix.browser }}"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
